[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-coding-agent"
version = "0.1.0"
description = "CLI wrapper that routes coding agents through Databricks"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1",
    "requests>=2.32",
]

[project.scripts]
databricks-coding-agent = "databricks_coding_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
